side menu working

--- a/Front-end App/DeliverItAngularProject/src/index.html
+++ b/Front-end App/DeliverItAngularProject/src/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8" />
     <title>DeliverIt</title>
     <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="icon" type="image" href="assets/logo.svg" />
+
+    <meta name="theme-color" content="#c00a0a">
 
     <!-- Ionicons -->
     <script
@@ -16,7 +18,10 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
-  </head>
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
   <body>
     <app-root></app-root>
   </body>
